--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "semantic-ui": "^2.2.7",
+    "semantic-ui-react": "^0.64.7",
     "uuid.v4": "^1.0.0"
   },
   "scripts": {
